--- a/09 - Audio Player/frontend/public/styles.css
+++ b/09 - Audio Player/frontend/public/styles.css
@@ -10,9 +10,8 @@ a {
   text-decoration: underline solid transparent;
   transition: text-decoration 1s ease;
   color: white; }
-
-a:hover {
-  text-decoration: underline solid currentColor; }
+  a:hover {
+    text-decoration: underline solid currentColor; }
 
 .fullscreen-bg {
   position: fixed;
@@ -39,9 +38,8 @@ a:hover {
 .menu, .timeBox {
   margin-top: -3.35vw;
   margin-left: -.6vw; }
-
-.menu:first-of-type, .timeBox:first-of-type {
-  margin-top: -1.6vw; }
+  .menu:first-of-type, .timeBox:first-of-type {
+    margin-top: -1.6vw; }
 
 .headText, .tailText, .timeBox {
   font-size: 8vw;
@@ -83,13 +81,13 @@ a:hover {
   margin-left: 1vw; }
 
 .playBtn, .playDetailBtn {
-  border: 2px solid white;
+  border: 1.5px solid white;
   background: transparent;
   color: inherit;
-  height: 40px;
-  width: 40px;
+  height: 3vw;
+  width: 3vw;
   border-radius: 50%;
-  font-size: 1.5rem;
+  font-size: 2vw;
   padding: 0;
   padding-bottom: 0.2vw; }
 
@@ -98,7 +96,7 @@ a:hover {
   opacity: 0.75; }
 
 .songItem {
-  font-size: 3rem;
+  font-size: 4vw;
   padding-left: 1vw; }
 
 .songDetailBox {
@@ -141,6 +139,22 @@ a:hover {
     background: url("/img/videobg.jpg") center center/cover no-repeat; }
   .fullscreen-bg__video {
     display: none; }
+  .menu, .timeBox {
+    margin-top: -1.25rem;
+    margin-left: -.15rem; }
+    .menu:first-of-type, .timeBox:first-of-type {
+      margin-top: -.55rem; }
+  .headText, .tailText, .time, .songName {
+    font-size: 3rem; }
+  .time {
+    width: 9rem; }
+  .playBtn, .playDetailBtn {
+    width: 2rem;
+    height: 2rem;
+    font-size: 1rem;
+    border: 1px solid white; }
+  .songItem {
+    font-size: 2rem; }
   .songDetail {
     display: block;
     margin-top: 2vw; }
