--- a/09 - Audio Player/frontend/public/styles.scss
+++ b/09 - Audio Player/frontend/public/styles.scss
@@ -12,10 +12,10 @@ a {
   text-decoration: underline solid transparent;
   transition: text-decoration 1s ease;
   color: white;
-  
-  &:hover {
-    text-decoration: underline solid currentColor;
-  }
+}
+
+a:hover {
+  text-decoration: underline solid currentColor;
 }
 
 //BACKGROUND
@@ -47,12 +47,11 @@ a {
 .menu {
   margin-top: -3.35vw;
   margin-left: -.6vw;
-
+}
   //position first line along top edge
-  &:first-of-type {
+  .menu:first-of-type {
     margin-top: -1.6vw;
   }
-}
 
   .headText, .tailText, .timeBox {
     font-size: 8vw;
@@ -110,13 +109,13 @@ a {
   }
 
   .playBtn {
-    border: 1.5px solid white;
+    border: 2px solid white;
     background: transparent;
     color: inherit;
-    height: 3vw;
-    width: 3vw;
+    height: 40px;
+    width: 40px;
     border-radius: 50%;
-    font-size: 2vw;
+    font-size: 1.5rem;
     padding: 0;
     padding-bottom: 0.2vw;
     @extend .ease;
@@ -129,7 +128,7 @@ a {
 
   //song title
   .songItem {
-    font-size: 4vw;
+    font-size: 3rem;
     padding-left: 1vw;
   }
 
@@ -170,12 +169,12 @@ a {
       border: 0.12vw solid white;
       padding-bottom: 0.2vw;
       margin-top: 1vw;
-
-      &:hover {
-        @extend .playBtn:hover;
-      }
     }
-    
+
+    .playDetailBtn:hover {
+      @extend .playBtn:hover;
+    }
+
     .description {
       margin: 2vw auto;
       font-size: 2.5vw;
@@ -185,9 +184,7 @@ a {
   cursor: pointer;
 }
 
-//*******RESPONSIVENESS*******//
 @media (max-width: 700px) {
-
   .fullscreen-bg {
       background: url('/img/videobg.jpg') center center / cover no-repeat;
   }
@@ -196,35 +193,6 @@ a {
         display: none;
     }
   
-  .menu {
-    margin-top: -1.25rem;
-    margin-left: -.15rem;
-  
-    //position first line along top edge
-    &:first-of-type {
-      margin-top: -.55rem;
-    }
-  }
-
-  .headText, .tailText, .time, .songName {
-    font-size: 3rem;
-  }
-  
-  .time {
-    width: 9rem;
-  }
-
-  .playBtn {
-    width: 2rem;
-    height: 2rem;
-    font-size: 1rem;
-    border: 1px solid white;
-  }
-
-  .songItem {
-    font-size: 2rem;
-  }
-
   .songDetail {
     display: block;
     margin-top: 2vw;
